[package]
name = "zippy"
version = "0.1.3"
authors = ["Joey Ezechiels <joey.ezechiels@gmail.com>"]
license = "MIT"
description = "CLI-based un/zipping tool that's available anywhere Rust is."
documentation = "https://docs.rs/zippy"
homepage = "https://github.com/jjpe/zippy"
repository = "https://github.com/jjpe/zippy"

[dependencies]
clap = "2.32"
ioe = "0.3"
walkdir = "2.2"
zip = "0.4"
