[package]
name = "zippy"
version = "0.2.0"
authors = ["Joey Ezechiels <joey.ezechiels@gmail.com>"]
license = "MIT"
description = "CLI-based un/zipping tool that's available anywhere Rust is."
documentation = "https://docs.rs/zippy"
homepage = "https://github.com/jjpe/zippy"
repository = "https://github.com/jjpe/zippy"
edition = "2021"

[dependencies]
ioe = "0.5.1"
walkdir = "2.3.2"
zip = "0.6.3"

[dependencies.clap]
version = "4.0.29"
features = ["cargo", "derive"]
